kubernetes/03-falco.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: falco
  namespace: nexoryx-security
spec:
  selector:
    matchLabels:
      app: falco
  template:
    metadata:
      labels:
        app: falco
    spec:
      containers:
      - name: falco
        image: falcosecurity/falco:0.38.2
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
