kubernetes/04-trivy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy
  namespace: nexoryx-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivy
  template:
    metadata:
      labels:
        app: trivy
    spec:
      containers:
      - name: trivy
        image: aquasec/trivy:0.54.1
        command:
        - sleep
        - infinity
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
