kubernetes/06-wireguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: nexoryx-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
      - name: wireguard
        image: linuxserver/wireguard
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_MODULE
        ports:
        - containerPort: 51820
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: nexoryx-security
spec:
  selector:
    app: wireguard
  ports:
  - port: 51820
    protocol: UDP
