kubernetes/02-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: nexoryx-security
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
